hphp/hack/test/typecheck/expression_trees_not_virtualize_functions/foreach.php
<?hh

<<file:__EnableUnstableFeatures('expression_trees')>>

function test(): void {
  ExampleDsl`(vec<int> $vi) ==> {
    $x = 0;
    foreach($vi as $i) {
      $x = $x + $i;
    }
  }`;
}
